Import of EWATERS/Thrift-Parser-0.02 from CPAN.
gitpan-cpan-distribution: Thrift-Parser
gitpan-cpan-version:      0.02
gitpan-cpan-path:         EWATERS/Thrift-Parser-0.02.tar.gz
gitpan-cpan-author:       EWATERS
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -95,7 +95,7 @@ SEE ALSO
 
 DEVELOPMENT
     This module is being developed via a git repository publicly available
-    at http://github.com/ewaters/thrift-parser. I encourage anyone who is
+    at <http://github.com/ewaters/thrift-parser>. I encourage anyone who is
     interested to fork my code and contribute bug fixes or new features, or
     just have fun and be creative.
 
