Import of EWATERS/Thrift-Parser-0.04 from CPAN.
gitpan-cpan-distribution: Thrift-Parser
gitpan-cpan-version:      0.04
gitpan-cpan-path:         EWATERS/Thrift-Parser-0.04.tar.gz
gitpan-cpan-author:       EWATERS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Thrift::Parser
 
+v0.04  Tue Sep 18 13:43:29 EDT 2012
+
+  - Add dependency for JSON::XS
+
 v0.03  Sun Sep 16 11:56:33 EDT 2012
 
   - Add dependency on Test::Deep and Params::Validate
